--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,4 +25,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: tkmra25/performance-dash-frontend:latest
+          tags: |
+            tkmra25/performance-dash-frontend:latest
+            tkmra25/performance-dash-frontend:${{ github.sha }}
+
